--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,15 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
 }
-
-.results-weather-container > * {
-  flex: 1;
-}
-
 
  
+
+ @media (max-width: 768px) {
+  .results-weather-container {
+    flex-direction: column;
+  }
+}
