--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,19 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 .App {
-  text-align: center;
+  display: flex;
   padding: 20px;
+  text-align: center;
+  flex-direction: column;
+  min-height: 100vh; 
+}
+
+.main-content {
+  flex: 1;
 }
 
 .results-weather-container {
